--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -38,7 +38,7 @@ msgctxt "error:document.request.batch:"
 msgid "No Batch Path Specified"
 msgstr "Le chemin d'exécution des batchs n'est pas configuré"
 
-msgctxt "error:ins_product.document_rule:"
+msgctxt "error:document.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
@@ -1201,79 +1201,79 @@ msgctxt "field:document.receive.set_requests,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.document_rule,config_kind:"
+msgctxt "field:document.rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
 
-msgctxt "field:ins_product.document_rule,create_date:"
+msgctxt "field:document.rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:ins_product.document_rule,create_date_:"
+msgctxt "field:document.rule,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:ins_product.document_rule,create_uid:"
+msgctxt "field:document.rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:ins_product.document_rule,documents:"
+msgctxt "field:document.rule,documents:"
 msgid "Documents"
 msgstr "Documents"
 
-msgctxt "field:ins_product.document_rule,end_date:"
+msgctxt "field:document.rule,end_date:"
 msgid "To Date"
 msgstr "Date de Fin"
 
-msgctxt "field:ins_product.document_rule,id:"
+msgctxt "field:document.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_product.document_rule,kind:"
+msgctxt "field:document.rule,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:ins_product.document_rule,must_expand_tree:"
+msgctxt "field:document.rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_product.document_rule,offered:"
+msgctxt "field:document.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
 
-msgctxt "field:ins_product.document_rule,rec_name:"
+msgctxt "field:document.rule,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.document_rule,rule:"
+msgctxt "field:document.rule,rule:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:ins_product.document_rule,rule_complementary_data:"
+msgctxt "field:document.rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
 
-msgctxt "field:ins_product.document_rule,start_date:"
+msgctxt "field:document.rule,start_date:"
 msgid "From Date"
 msgstr "Date de Début"
 
-msgctxt "field:ins_product.document_rule,template:"
+msgctxt "field:document.rule,template:"
 msgid "Template"
 msgstr "Modèle"
 
-msgctxt "field:ins_product.document_rule,template_behaviour:"
+msgctxt "field:document.rule,template_behaviour:"
 msgid "Template Behaviour"
 msgstr "Comportement du Modèle"
 
-msgctxt "field:ins_product.document_rule,view_rec_name:"
+msgctxt "field:document.rule,view_rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:ins_product.document_rule,write_date:"
+msgctxt "field:document.rule,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:ins_product.document_rule,write_uid:"
+msgctxt "field:document.rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -3340,7 +3340,7 @@ msgctxt "model:document.receive.set_requests,name:"
 msgid "Document Request Displayer"
 msgstr "Document en attente"
 
-msgctxt "model:ins_product.document_rule,name:"
+msgctxt "model:document.rule,name:"
 msgid "Document Managing Rule"
 msgstr ""
 
@@ -3980,51 +3980,51 @@ msgctxt "selection:document.request,needed_by:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.document_rule,config_kind:"
+msgctxt "selection:document.rule,config_kind:"
 msgid "Advanced"
 msgstr "Avancé"
 
-msgctxt "selection:ins_product.document_rule,config_kind:"
+msgctxt "selection:document.rule,config_kind:"
 msgid "Simple"
 msgstr "Simple"
 
-msgctxt "selection:ins_product.document_rule,kind:"
+msgctxt "selection:document.rule,kind:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.document_rule,kind:"
+msgctxt "selection:document.rule,kind:"
 msgid "Loss"
 msgstr "Préjudice"
 
-msgctxt "selection:ins_product.document_rule,kind:"
+msgctxt "selection:document.rule,kind:"
 msgid "Main"
 msgstr "Principale"
 
-msgctxt "selection:ins_product.document_rule,kind:"
+msgctxt "selection:document.rule,kind:"
 msgid "Sub Elem"
 msgstr "Elément Couvert"
 
-msgctxt "selection:ins_product.document_rule,offered:"
+msgctxt "selection:document.rule,offered:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:ins_product.document_rule,offered:"
+msgctxt "selection:document.rule,offered:"
 msgid "Coverage"
 msgstr "Garantie"
 
-msgctxt "selection:ins_product.document_rule,offered:"
+msgctxt "selection:document.rule,offered:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "selection:ins_product.document_rule,template_behaviour:"
+msgctxt "selection:document.rule,template_behaviour:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:ins_product.document_rule,template_behaviour:"
+msgctxt "selection:document.rule,template_behaviour:"
 msgid "Add"
 msgstr "Compléter"
 
-msgctxt "selection:ins_product.document_rule,template_behaviour:"
+msgctxt "selection:document.rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
 
@@ -4612,7 +4612,7 @@ msgctxt "view:document.receive.set_requests:"
 msgid "Document Request"
 msgstr "Document Request"
 
-msgctxt "view:ins_product.document_rule:"
+msgctxt "view:document.rule:"
 msgid "Document Rule"
 msgstr "Document"
 
